examples/kubernetes/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agent-grpc
  namespace: agent-test
spec:
  selector:
    app: controller
  type: ClusterIP
  ports:
  - name: agent-grpc
    port: 9001
    protocol: TCP
    targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: controller-internal
  namespace: agent-test
spec:
  selector:
    app: controller
  type: ClusterIP
  ports:
  - name: service-api
    port: 9002
    protocol: TCP
    targetPort: service-api
  - name: control-api
    port: 9003
    protocol: TCP
    targetPort: control-api
