examples/kubernetes/controller-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: agent-grpc
  namespace: agent-test
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`controller.svc.rpi.flame.org`)"
      services:
        - kind: Service
          name: agent-grpc
          scheme: h2c
          port: 9001
  tls:
    secretName: agent-grpc-tls
